Day2: Docker+Slack E2E up; fix LLM time clash, regime/techscore calls, Slack AUTO_MODE gating; healthz skip flag; uptime; Redis xpending; logs cleanup; env.example update

--- a/env.example
+++ b/env.example
@@ -1,59 +1,30 @@
-# OpenAI API
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Slack
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
-SLACK_CHANNEL_ID=Cxxxxxxxx  # 채널 ID 사용 권장
-SLACK_SIGNING_SECRET=your_slack_signing_secret
-
-# Redis / Postgres
+# --- infra ---
 REDIS_URL=redis://redis:6379/0
 POSTGRES_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
+DATABASE_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
 
-# LLM Configuration
-LLM_MONTHLY_CAP_KRW=80000
+# --- llm ---
+OPENAI_API_KEY=your_openai_api_key_here
 LLM_ENABLED=true
-USD_TO_KRW=1300
 
-# Bot behavior
+# --- run mode ---
+AUTO_MODE=0            # 이번 주는 알림/기록만. 다음 주에 반자동 버튼, 그다음 자동.
+BROKER=paper           # 가상 체결 기록만 남김.
+
+# --- slack (알림) ---
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+SLACK_SIGNING_SECRET=your_slack_signing_secret
+
+# --- api base / defaults ---
+API_BASE_URL=http://trading_bot_api:8000
 DEFAULT_QTY=1
-API_BASE_URL=http://api:8000  # 내부 호출 시 사용 (docker-compose 서비스명)
+# (옵션) 코드가 따로 쓰면:
+HEALTHCHECK_URL=http://trading_bot_api:8000/healthz
 
-# Broker (KIS)
-KIS_APP_KEY=your_kis_app_key
-KIS_APP_SECRET=your_kis_app_secret
-KIS_ACCESS_TOKEN=your_kis_access_token
+RTH_ONLY=true
+# LLM 호출 조건은 코드상: (edgar_event OR regime==vol_spike) AND RTH
 
-# Trading Configuration
-AUTO_MODE=0  # 0: manual, 1: auto
-BROKER=kis  # kis, paper
-DAILY_LOSS_LIMIT=0.03  # 3%
-MAX_POSITIONS=5
-MAX_EXPOSURE=0.1  # 10%
-
-# Signal Thresholds
-SIGNAL_LONG=0.6
-SIGNAL_SHORT=-0.6
-SIGNAL_COOLDOWN_SEC=60
-EDGAR_OVERRIDE_ITEMS=1.01,2.02
-REGULATORY_BLOCK_WORDS=regulatory,litigation,FTC,SEC,DoJ
-
-# Schedule
-DAILY_REPORT_KST=06:10
-
-# Risk Management
-VAR_95_LIMIT=0.02  # 2%
-MAX_DRAWDOWN_LIMIT=0.05  # 5%
-POSITION_SIZE_LIMIT=0.02  # 2% per position
-
-# Performance
-SIGNAL_LATENCY_LIMIT_MS=1000
-EXECUTION_LATENCY_LIMIT_MS=2000
-
-# Logging
-LOG_LEVEL=INFO
-LOG_FILE=logs/trading_bot.log
-
-# Development
-DEBUG=false
-TEST_MODE=false
+# --- dev helper ---
+# 로컬 개발 시 외부 의존성(REDIS/DB/SLACK) 헬스체크를 건너뜀
+HEALTHZ_SKIP_EXTERNAL=true
+    AUTO_MODE=1
