--- a/env.example
+++ b/env.example
@@ -3,16 +3,18 @@ REDIS_URL=redis://redis:6379/0
 POSTGRES_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
 DATABASE_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
 
-# --- llm ---
-OPENAI_API_KEY=your_openai_api_key_here
-LLM_ENABLED=true
-
-# --- run mode ---
-AUTO_MODE=0            # 이번 주는 알림/기록만. 다음 주에 반자동 버튼, 그다음 자동.
-BROKER=paper           # 가상 체결 기록만 남김.
+# --- runtime ---
+AUTO_MODE=0                # 자동 체결 OFF (알림/기록만)
+SEMI_AUTO_BUTTONS=1        # 슬랙 버튼 표시 ON (AUTO_MODE와 분리)
+BROKER=paper               # 가상 체결 기록만 남김
+RTH_ONLY=true              # 장중(RTH)만 신호/LLM 허용
+TZ=Asia/Seoul
+DEV_MODE=false             # DEV 전용 엔드포인트 허용 여부(운영 false)
+HEALTHZ_SKIP_EXTERNAL=false
 
 # --- slack (알림) ---
 SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+SLACK_CHANNEL_ID=Cxxxxxxxx
 SLACK_SIGNING_SECRET=your_slack_signing_secret
 
 # --- api base / defaults ---
@@ -21,8 +23,25 @@ DEFAULT_QTY=1
 # (옵션) 코드가 따로 쓰면:
 HEALTHCHECK_URL=http://trading_bot_api:8000/healthz
 
-RTH_ONLY=true
-# LLM 호출 조건은 코드상: (edgar_event OR regime==vol_spike) AND RTH
+# --- llm ---
+OPENAI_API_KEY=your_openai_api_key_here
+LLM_ENABLED=true
+LLM_MONTHLY_CAP_KRW=80000
+
+# --- edgar ingest ---
+EDGAR_ENABLED=true
+SEC_USER_AGENT="email@example.com; org; purpose"
+EDGAR_POLL_SEC=15
+
+# --- quotes ingest (delayed) ---
+QUOTES_PROVIDER=delayed
+TICKERS=AAPL,MSFT,TSLA,NVDA,AMZN
+BAR_SEC=30
+
+# --- security ---
+SIGNAL_API_KEY=change_me    # /signal 보호용 API 키 (운영 필수)
+
+# LLM 호출 조건: (edgar_event OR regime==vol_spike) AND RTH
 
 # --- dev helper ---
 # 로컬 개발 시 외부 의존성(REDIS/DB/SLACK) 헬스체크를 건너뜀
