security: require X-API-Key for /signal in prod; document in env.example

--- a/env.example
+++ b/env.example
@@ -39,7 +39,7 @@ TICKERS=AAPL,MSFT,TSLA,NVDA,AMZN
 BAR_SEC=30
 
 # --- security ---
-SIGNAL_API_KEY=change_me    # /signal 보호용 API 키 (운영 필수)
+SIGNAL_API_KEY=change_me    # /signal 보호용 API 키 (운영 필수). header: X-API-Key
 
 # LLM 호출 조건: (edgar_event OR regime==vol_spike) AND RTH
 
