--- a/env.example
+++ b/env.example
@@ -3,47 +3,56 @@ REDIS_URL=redis://redis:6379/0
 POSTGRES_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
 DATABASE_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
 
-# --- runtime ---
-AUTO_MODE=0                # 자동 체결 OFF (알림/기록만)
-SEMI_AUTO_BUTTONS=1        # 슬랙 버튼 표시 ON (AUTO_MODE와 분리)
-BROKER=paper               # 가상 체결 기록만 남김
-RTH_ONLY=true              # 장중(RTH)만 신호/LLM 허용
-TZ=Asia/Seoul
-DEV_MODE=false             # DEV 전용 엔드포인트 허용 여부(운영 false)
-HEALTHZ_SKIP_EXTERNAL=false
+# --- llm ---
+OPENAI_API_KEY=sk-비밀
+LLM_MONTHLY_CAP_KRW=80000
+LLM_ENABLED=true
+
+# --- run mode ---
+AUTO_MODE=0
+BROKER=paper
 
 # --- slack (알림) ---
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
-SLACK_CHANNEL_ID=Cxxxxxxxx
-SLACK_SIGNING_SECRET=your_slack_signing_secret
+SLACK_BOT_TOKEN=xoxb-비밀
+SLACK_CHANNEL_ID=C099CQ비밀
+SLACK_SIGNING_SECRET=a3da8ba비밀
 
 # --- api base / defaults ---
 API_BASE_URL=http://trading_bot_api:8000
 DEFAULT_QTY=1
-# (옵션) 코드가 따로 쓰면:
 HEALTHCHECK_URL=http://trading_bot_api:8000/healthz
+TZ=Asia/Seoul
 
-# --- llm ---
-OPENAI_API_KEY=your_openai_api_key_here
-LLM_ENABLED=true
-LLM_MONTHLY_CAP_KRW=80000
-
-# --- edgar ingest ---
+# --- market session / signals ---
+# 장외까지 가격 신호 허용(공격 모드)
+RTH_ONLY=false
+SEMI_AUTO_BUTTONS=1
 EDGAR_ENABLED=true
-SEC_USER_AGENT="email@example.com; org; purpose"
-EDGAR_POLL_SEC=15
+SEC_USER_AGENT=ai@local.test; ai-trading-app; research
 
-# --- quotes ingest (delayed) ---
+# 컷오프/필터 (코드에서 env 읽도록 반영 예정)
+SIGNAL_CUTOFF=0.68           # 정규장 컷오프
+EXTENDED_PRICE_SIGNALS=true   # 장외 가격 신호 허용 스위치
+EXT_SIGNAL_CUTOFF=0.78        # 장외 컷오프(노이즈 상쇄)
+VOLSPIKE_PCTL=90              # p95 -> p90
+VOLSPIKE_RATIO=1.6            # 2.0 -> 1.6
+MIN_BAR_RET_ABS=0.006         # 30s 절대 수익률 트리거(0.6%)
+EXT_MIN_DOLLAR_VOL_5M=500000  # 장외: 최근5분 달러대금 ≥ $0.5M
+EXT_MAX_SPREAD_BP=60          # 장외: 스프레드 ≤ 60bp
+EXT_COOLDOWN_MIN=7            # 장외: 동일 티커/트리거 7분 내 1회
+
+# 바 주기 (가능하면 15초, 불가 시 30초 유지)
+BAR_SEC=15
 QUOTES_PROVIDER=delayed
-TICKERS=AAPL,MSFT,TSLA,NVDA,AMZN
-BAR_SEC=30
 
-# --- security ---
-SIGNAL_API_KEY=change_me    # /signal 보호용 API 키 (운영 필수). header: X-API-Key
+# 유니버스(초기값: Core + A+B 요지, 중복 자동 제거 전제)
+# 필요 시 /universe/set API로 A/B JSON을 주입해 동적 확장(권장)
+TICKERS=AAPL,MSFT,TSLA,NVDA,AMZN,META,GOOGL,AMD,NFLX,AVGO,SPY,QQQ,IWM,TQQQ,SQQQ,SOXL,SOXS,PLTR,MU,SQ,UPST,FTNT,EXPE,BROS,CAVA,SOUN,CRCL,BBAI,REAL,LZ,MEG,OUST,LASR,OPRX,SYM,KTOS,JD,DE,AMC,CSCO,AMAT,UAL,DAL,EA,SMCI,COIN,UBER,MU
 
-# LLM 호출 조건: (edgar_event OR regime==vol_spike) AND RTH
-
-# --- dev helper ---
-# 로컬 개발 시 외부 의존성(REDIS/DB/SLACK) 헬스체크를 건너뜀
-HEALTHZ_SKIP_EXTERNAL=true
-    AUTO_MODE=1
+# (옵션) LLM 코멘터리(사람 말투 Pulse)
+LLM_COMMENTARY_ENABLED=true
+LLM_COMMENTARY_DAILY_CAP_KRW=200
+LLM_COMMENTARY_PULSE_MIN=20
+LLM_COMMENTARY_LANG=ko
+LLM_COMMENTARY_TONE=trader_calm
+LLM_COMMENTARY_MAX_CHARS=180
