docs: 알파카 연동 및 주문 타임아웃 디버깅 과정 기록
알파카 페이퍼 트레이딩 API 연동 중 발생한 주문 타임아웃 문제를 해결하는 과정을 DEVELOPMENT_JOURNEY.md에 상세히 기록함. 시장이 닫혔을 때 발생하는 오류를 명확히 처리하도록 코드를 수정하고, 관련 Docker 동기화 문제 해결 과정을 포함.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://trading_bot_user:${POSTGRES_PASSWORD:-trading_bot_password}@postgres:5432/trading_bot
       - REDIS_URL=redis://redis:6379/0
-      - BROKER=${BROKER:-kis}
+      - BROKER=${BROKER:-alpaca_paper}
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
@@ -86,7 +86,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://trading_bot_user:${POSTGRES_PASSWORD:-trading_bot_password}@postgres:5432/trading_bot
       - REDIS_URL=redis://redis:6379/0
-      - BROKER=${BROKER:-kis}
+      - BROKER=${BROKER:-alpaca_paper}
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
@@ -115,7 +115,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://trading_bot_user:${POSTGRES_PASSWORD:-trading_bot_password}@postgres:5432/trading_bot
       - REDIS_URL=redis://redis:6379/0
-      - BROKER=${BROKER:-kis}
+      - BROKER=${BROKER:-alpaca_paper}
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
