공격모드 플레이북 문서 추가

--- a/.env.example
+++ b/.env.example
@@ -1,67 +1,188 @@
-# Trading Bot Configuration Example
-# Copy this file to .env and configure with your actual values
+# --- infra ---
+REDIS_URL=redis://redis:6379/0
+POSTGRES_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
+DATABASE_URL=postgresql://trading_bot_user:trading_bot_password@postgres:5432/trading_bot
 
-# Database
-DATABASE_URL=postgresql://trading_bot_user:trading_bot_password@localhost:5432/trading_bot
-POSTGRES_PASSWORD=trading_bot_password
-REDIS_URL=redis://localhost:6379/0
 
-# Broker Configuration
-BROKER=alpaca_paper
-ALPACA_API_KEY=your_alpaca_api_key
-ALPACA_API_SECRET=your_alpaca_api_secret
-ALPACA_BASE_URL=https://paper-api.alpaca.markets
-
-# LLM Configuration
-OPENAI_API_KEY=your_openai_api_key
+# --- llm ---
+OPENAI_API_KEY=sk-secret
 LLM_MONTHLY_CAP_KRW=80000
-LLM_DAILY_CALL_LIMIT=120
-LLM_CALL_COST_KRW=667
-LLM_GATING_ENABLED=true
-LLM_MIN_SIGNAL_SCORE=0.7
-LLM_CACHE_DURATION_MIN=30
+LLM_ENABLED=true
 
-# Slack Configuration
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
-SLACK_SIGNING_SECRET=your_slack_signing_secret
-SLACK_CHANNEL=#trading-signals
+# --- run mode ---
+AUTO_MODE=1
+BROKER=alpaca_paper
+
+# --- alpaca api ---
+ALPACA_API_KEY=PKLA8TBD5Q725RKRM365
+ALPACA_API_SECRET=kxfkX3YhAUjgFNXDv7MoNqxOTrPuMqlac9ELvqRt
+
+# --- slack (알림) ---
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token-here
 SLACK_CHANNEL_ID=C099CQP8CJ3
+SLACK_SIGNING_SECRET=a3da8ba843a462c0077f6bc548977f0b
 
-# Trading Parameters
-AUTO_MODE=0  # 0=simulation, 1=live trading
-INITIAL_CAPITAL=1000000
-DAILY_LOSS_LIMIT=0.03
-WATCHLIST=AAPL,MSFT,GOOGL,AMZN,TSLA
+# --- api base / defaults ---
+API_BASE_URL=http://trading_bot_api:8000
+DEFAULT_QTY=1
+# (옵션) 코드가 따로 쓰면:
+HEALTHCHECK_URL=http://trading_bot_api:8000/healthz
 
-# Tier System Configuration (스케줄러 최적화 관련)
-TIER_A_TICKERS=NVDA,TSLA,AAPL
-TIER_B_TICKERS=MSFT,AMZN,META
-BENCH_TICKERS=GOOGL,AMD,AVGO
+RTH_ONLY=false
+# LLM 호출 조건은 코드상: (edgar_event OR regime==vol_spike) AND RTH
+# Day3 vars
+SEMI_AUTO_BUTTONS=0
+
+# Testing flags
+TEST_FORCE_RTH=0
+
+# --- 기획 개선: 바스켓 라우팅 잡음 방지 강화 ---
+BASKET_WINDOW_SEC=300
+BASKET_MIN_SIGNALS=3
+BASKET_NEG_FRACTION=0.45
+BASKET_MEAN_THRESHOLD=-0.12
+BASKET_SAMPLE_N=200
+EDGAR_ENABLED=true
+SEC_USER_AGENT=ai@local.test; ai-trading-app; research
+TICKERS=AAPL,NVDA,TSLA,MSFT,SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV,SARK
+BAR_SEC=30
+QUOTES_PROVIDER=delayed
+
+EXTENDED_PRICE_SIGNALS=true
+EXT_MIN_DOLLAR_VOL_5M=100000
+EXT_MAX_SPREAD_BP=200
+EXT_COOLDOWN_MIN=2
+
+# --- 기획 개선: 정상 주식 중심 Universe ---
+# Tier A: 고빈도 분석 (30초마다) - 메인 종목
+TIER_A_TICKERS=NVDA,AAPL,MSFT,TSLA
 TIER_A_INTERVAL_SEC=30
+
+# Tier B: 중빈도 분석 (60초마다) - 보조 종목
+TIER_B_TICKERS=AMZN,GOOGL,META,SQQQ
 TIER_B_INTERVAL_SEC=60
 
-# API Rate Limiting
+# 벤치: 이벤트 기반 - 테스트용 종목
+BENCH_TICKERS=AMD,AVGO,NFLX,SOXS
+
+# --- API Rate Limiting ---
+# 분당 API 호출 제한 (총 10콜/분)
 API_CALLS_PER_MINUTE=10
 API_TIER_A_ALLOCATION=6
 API_TIER_B_ALLOCATION=3
 API_RESERVE_ALLOCATION=1
 
-# Signal Thresholds (최적화된 값)
-MIXER_THRESHOLD=0.15  # 매수 임계값 (매도는 -0.15)
-SIGNAL_CUTOFF_RTH=0.12  # 정규장 시간 신호 차단 임계값
-MIN_HOLD_SEC=60  # 최소 보유 시간 (초)
-TRAIL_R_RATIO=0.7  # 트레일링 스톱 비율
+# --- LLM Gating System ---
+# 일일 LLM 호출 제한 (비용 절약)
+LLM_DAILY_CALL_LIMIT=120
+LLM_CALL_COST_KRW=667
+LLM_GATING_ENABLED=true
 
-# Position Management
+# --- 기획 개선: LLM 사용 정책 개선 ---
+# LLM 최소 점수 (단일 소스 기준으로 통일)
+LLM_MIN_SIGNAL_SCORE=0.25
+# LLM 필수 이벤트 목록 확장
+LLM_REQUIRED_EVENTS=edgar,vol_spike,fed_speech,rate_decision,market_news,tech_earnings,basket_inverse_entry,macro_risk_on_off
+RTH_DAILY_CAP=100
+GLOBAL_RTH_DAILY_CAP=150
+SIGNAL_CUTOFF_RTH_DELTA=-0.03
+#SIGNAL_CUTOFF_EXT_DELTA=0.0
+# 기본 쿨다운/방향락
+COOLDOWN_SECONDS=180
+DIRECTION_LOCK_SECONDS=90
+# 인버스 전용 가드레일 (더 엄격)
+COOLDOWN_INVERSE_SEC=300
+DIRECTION_LOCK_INVERSE_SEC=300
+STOP_LOSS_PCT_INVERSE=0.03
+LLM_CACHE_DURATION_MIN=30
+
+# --- Position Sizing ---
+# 소액계좌 보호를 위한 명목 상한
 POSITION_CAP_ENABLED=true
 POSITION_MAX_EQUITY_PCT=0.8
 POSITION_MIN_SLOTS=3
 
-# Market Data
+# --- Edgar Override Items ---
+EDGAR_OVERRIDE_ITEMS=1.01,2.02,2.03,8.01
+REGULATORY_BLOCK_WORDS=regulatory,litigation,FTC,SEC,DoJ,antitrust
+
+# --- 기획 개선: Inverse ETF 지원 확장 ---
+INVERSE_ETFS=SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV,SARK,UVXY
+LEVERAGED_ETFS=SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV
+
+# --- 기획 개선: 임계값 통일 및 비대칭 설계 ---
+# 기본 신호 임계값 (단일 소스 기준선)
+MIXER_THRESHOLD=0.20
+# 롱 진입/청산 임계값
+BUY_THRESHOLD=0.20
+SELL_THRESHOLD=-0.20
+# 인버스 진입 최소값 (더 엄격)
+INVERSE_ENTRY_MIN_SCORE=0.30
+# 세션별 신호 컷오프
+SIGNAL_CUTOFF_RTH=0.18
+SIGNAL_CUTOFF_EXT=0.28
+
+# 방향락 및 쿨다운
+DIRECTION_LOCK_SECONDS=90
+
+# 리스크 관리 (GPT-5 권장) - 월요일 테스트용 임시 축소
+RISK_PER_TRADE=0.002
+MAX_CONCURRENT_RISK=0.01
+STOP_LOSS_PCT=0.015
+TAKE_PROFIT_RR=1.5
+
+# EOD 관리
+EOD_FLATTEN_MINUTES=10
+
+# --- EOD/Guardrails ---
+ENABLE_TIME_STOP=1
+TIME_STOP_MIN=45
+TIME_STOP_LATE_ENTRY_CUTOFF_MIN=10
+
+ENABLE_TRAIL_STOP=0
+TRAIL_RET_PCT=0.005
+TRAIL_MIN_HOLD_MIN=5
+
+ENABLE_REGIME_FLATTEN_INVERSE=1
+INVERSE_TICKERS=SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV,SARK
+
+# EOD retry knobs
+EOD_MAX_RETRIES=2
+EOD_RETRY_DELAY_SEC=30
+
+# --- 숏 ETF 청산 로직 ---
+MIN_HOLD_SEC=60
+TRAIL_R_RATIO=0.7
 VOLUME_SPIKE_MULTIPLIER=1.5
 CANDLE_BREAK_EPSILON=0.01
 
-# Monitoring (optional)
-GRAFANA_PASSWORD=admin
-PGADMIN_EMAIL=admin@tradingbot.com
-PGADMIN_PASSWORD=admin
+# 소수 거래 지원 (Alpaca)
+FRACTIONAL_ENABLED=0
+
+# --- 사이징 자본 오버라이드 (GPT 권장) ---
+SIZING_EQUITY_MODE=override
+SIZING_EQUITY_KRW=1000000
+USD_KRW_RATE=1350
+
+# --- 고가 종목 필터 ---
+MAX_PRICE_PER_SHARE_USD=120
+MIN_ORDER_NOTIONAL_USD=20
+
+# --- 기획 개선: 예산 일원화 (한화 100만원) ---
+# 포지션 사이징 관련
+RISK_PER_TRADE=0.008
+MAX_CONCURRENT_RISK=0.04
+MAX_NOTIONAL_PER_TRADE_KRW=250000
+# 가격 상한/분할매수
+FRACTIONAL_ENABLED=true
+MAX_PRICE_PER_SHARE_USD=120
+# LLM/EDGAR 없을 때 재정규화 비활성화
+RENORM_NO_SENTIMENT=false
+# 테스트/개발 모드
+TEST_MODE_ENABLED=false
+DISABLE_REAL_TRADING=false
+DISABLE_SLACK_ALERTS=false
+# EDGAR 보너스
+EDGAR_BONUS=0.10
+# 쿨다운 개선 최소값
+COOL_IMPROVE_MIN=0.10
