--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
-      - SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET}
-      - SLACK_CHANNEL=${SLACK_CHANNEL:-#trading-signals}
+      - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
       - INITIAL_CAPITAL=${INITIAL_CAPITAL:-1000000}
       - DAILY_LOSS_LIMIT=${DAILY_LOSS_LIMIT:-0.03}
       - WATCHLIST=${WATCHLIST:-AAPL,MSFT,GOOGL,AMZN,TSLA}
@@ -115,7 +114,8 @@ services:
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
-      - SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET}
+      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+      - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
       - INITIAL_CAPITAL=${INITIAL_CAPITAL:-1000000}
       - DAILY_LOSS_LIMIT=${DAILY_LOSS_LIMIT:-0.03}
       - WATCHLIST=${WATCHLIST:-AAPL,MSFT,GOOGL,AMZN,TSLA}
@@ -169,6 +169,8 @@ services:
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
+      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+      - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
       - INITIAL_CAPITAL=${INITIAL_CAPITAL:-1000000}
       - DAILY_LOSS_LIMIT=${DAILY_LOSS_LIMIT:-0.03}
       - WATCHLIST=${WATCHLIST:-AAPL,MSFT,GOOGL,AMZN,TSLA}
