chore(compose): add DISABLE_SLACK_ALERTS env and make SLACK_BOT_TOKEN optional; set LLM_MIN_SIGNAL_SCORE default to 0.6 (aligned)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,8 @@ services:
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
-      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-}
+      - DISABLE_SLACK_ALERTS=${DISABLE_SLACK_ALERTS:-false}
       - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
       - INITIAL_CAPITAL=${INITIAL_CAPITAL:-1000000}
       - DAILY_LOSS_LIMIT=${DAILY_LOSS_LIMIT:-0.03}
@@ -70,7 +71,7 @@ services:
       - LLM_DAILY_CALL_LIMIT=${LLM_DAILY_CALL_LIMIT:-120}
       - LLM_CALL_COST_KRW=${LLM_CALL_COST_KRW:-667}
       - LLM_GATING_ENABLED=${LLM_GATING_ENABLED:-true}
-      - LLM_MIN_SIGNAL_SCORE=${LLM_MIN_SIGNAL_SCORE:-0.7}
+      - LLM_MIN_SIGNAL_SCORE=${LLM_MIN_SIGNAL_SCORE:-0.6}
       - LLM_CACHE_DURATION_MIN=${LLM_CACHE_DURATION_MIN:-30}
       - MIXER_THRESHOLD=${MIXER_THRESHOLD:-0.15}
       - SIGNAL_CUTOFF_RTH=${SIGNAL_CUTOFF_RTH:-0.12}
@@ -114,7 +115,8 @@ services:
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
-      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-}
+      - DISABLE_SLACK_ALERTS=${DISABLE_SLACK_ALERTS:-false}
       - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
       - INITIAL_CAPITAL=${INITIAL_CAPITAL:-1000000}
       - DAILY_LOSS_LIMIT=${DAILY_LOSS_LIMIT:-0.03}
@@ -132,7 +134,7 @@ services:
       - LLM_DAILY_CALL_LIMIT=${LLM_DAILY_CALL_LIMIT:-120}
       - LLM_CALL_COST_KRW=${LLM_CALL_COST_KRW:-667}
       - LLM_GATING_ENABLED=${LLM_GATING_ENABLED:-true}
-      - LLM_MIN_SIGNAL_SCORE=${LLM_MIN_SIGNAL_SCORE:-0.7}
+      - LLM_MIN_SIGNAL_SCORE=${LLM_MIN_SIGNAL_SCORE:-0.6}
       - LLM_CACHE_DURATION_MIN=${LLM_CACHE_DURATION_MIN:-30}
       - MIXER_THRESHOLD=${MIXER_THRESHOLD:-0.15}
       - SIGNAL_CUTOFF_RTH=${SIGNAL_CUTOFF_RTH:-0.12}
@@ -169,7 +171,8 @@ services:
       - AUTO_MODE=${AUTO_MODE:-0}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LLM_MONTHLY_CAP_KRW=${LLM_MONTHLY_CAP_KRW:-80000}
-      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
+      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-}
+      - DISABLE_SLACK_ALERTS=${DISABLE_SLACK_ALERTS:-false}
       - SLACK_CHANNEL_ID=${SLACK_CHANNEL_ID}
       - INITIAL_CAPITAL=${INITIAL_CAPITAL:-1000000}
       - DAILY_LOSS_LIMIT=${DAILY_LOSS_LIMIT:-0.03}
@@ -187,7 +190,7 @@ services:
       - LLM_DAILY_CALL_LIMIT=${LLM_DAILY_CALL_LIMIT:-120}
       - LLM_CALL_COST_KRW=${LLM_CALL_COST_KRW:-667}
       - LLM_GATING_ENABLED=${LLM_GATING_ENABLED:-true}
-      - LLM_MIN_SIGNAL_SCORE=${LLM_MIN_SIGNAL_SCORE:-0.7}
+      - LLM_MIN_SIGNAL_SCORE=${LLM_MIN_SIGNAL_SCORE:-0.6}
       - LLM_CACHE_DURATION_MIN=${LLM_CACHE_DURATION_MIN:-30}
       - MIXER_THRESHOLD=${MIXER_THRESHOLD:-0.15}
       - SIGNAL_CUTOFF_RTH=${SIGNAL_CUTOFF_RTH:-0.12}
