--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ HEALTHCHECK_URL=http://trading_bot_api:8000/healthz
 
 # --- 지정된 핵심 설정만 유지 ---
 MIXER_THRESHOLD=0.10
-SIGNAL_CUTOFF_RTH=0.10
+SIGNAL_CUTOFF_RTH=0.12
 SIGNAL_CUTOFF_RTH_DELTA=0.0
 RISK_PER_TRADE=0.008
 MAX_CONCURRENT_RISK=0.04
@@ -35,8 +35,14 @@ ENABLE_TRAIL_STOP=1
 TRAIL_RET_PCT=0.004
 COOLDOWN_SECONDS=120
 DIRECTION_LOCK_SECONDS=120
-QUOTES_PROVIDER=alpaca
-INVERSE_ETFS=SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV,SARK,UVX
+QUOTES_PROVIDER=delayed
+INVERSE_ETFS=SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV,SARK,UVXY
 LEVERAGED_ETFS=SOXS,SQQQ,SPXS,TZA,SDOW,TECS,DRV,UVXY
 FRACTIONAL_ENABLED=true
 MAX_PRICE_PER_SHARE_USD=120
+
+# --- LLM 설정 ---
+LLM_MIN_SIGNAL_SCORE=0.6
+
+# --- Slack 경고 제거 ---
+DISABLE_SLACK_ALERTS=true
